<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="30dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_margin="20dp"/>

            <TextView
                android:id="@+id/passwordView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:text="@string/password_mask"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <ImageButton
                    android:id="@+id/favoriteButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="bottom"
                    android:backgroundTint="#FFFFFF"
                    android:contentDescription="@string/hearticon"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/heart_icon" />

                <ImageButton
                    android:id="@+id/shareButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="bottom"
                    android:backgroundTint="#FFFFFF"
                    android:contentDescription="@string/sharebutton"
                    app:srcCompat="@drawable/baseline_share_24" />

                <ImageButton
                    android:id="@+id/copyButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="bottom"
                    android:backgroundTint="#FFFFFF"
                    android:contentDescription="@string/copy_button"
                    android:src="@drawable/baseline_file_copy_24" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_length"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:id="@+id/passwordLengthTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:text="@string/_8"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:visibility="gone" />

        <SeekBar
            android:id="@+id/passwordLengthSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="64"
            android:min="6"/>

        <CheckBox
            android:id="@+id/lowercase_checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:checked="true"
            android:text="@string/lowercase" />

        <CheckBox
            android:id="@+id/uppercase_checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uppercase" />

        <CheckBox
            android:id="@+id/digit_checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/digits" />

        <CheckBox
            android:id="@+id/specialCharacters_checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/special_characters" />

        <Button
            android:id="@+id/generateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/generate"
            android:layout_gravity="bottom"
            android:layout_marginTop="130dp"/>

    </LinearLayout>


</LinearLayout>